--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
-  port: 80
+  port: 443
+  ssl:
+    key-store: www.flypigeon.cn.jks
+    key-store-password: # key-store-password
+    key-store-type: JKS
 
 spring:
   servlet:
